# OpenCL_PA_2012

./: .gitignore  CMakeLists.txt  README.md
src/cellular_automata/: Makefile  cl_cellular_automata.cpp  cl_cellular_automata.h  glut_win.h  life.cl  main.cpp  win_cellular_automata.cpp  win_cellular_automata.h
src/fft/: Makefile  cl_fft.cpp  cl_fft.h  fft.cl  fftw_fft.h  generate_data.m  main.cpp  txt_file.h
src/floyd_warshall/: Makefile  cl_floyd_warshall.cpp  ewd_file.cpp  floyd_warshall.cl
src/julia/: Makefile  cl_julia.cpp  cl_julia.h  glut_win.cpp  julia.cl  main.cpp  win_julia.cpp  win_julia.h
src/simple/: Makefile
src/test/: Makefile  test.cpp
